#68 Fixed z-index in treeboxes

--- a/components/src/main/resources/META-INF/resources/butterfaces-less/butterfaces-treebox.less
+++ b/components/src/main/resources/META-INF/resources/butterfaces-less/butterfaces-treebox.less
@@ -43,7 +43,7 @@
 }
 
 .tr-dropdown {
-  z-index: 3 !important; /* bootstrap form-control has 2, should be fixed in trivial components */
+  z-index: 1051 !important; /* bootstrap form-control has 2, should be fixed in trivial components */
 }
 
 .tr-dropdown .tr-template-icon-2-lines .content-wrapper .main-line,
